# parcels

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: auth.rs  db.rs  main.rs  usps.rs
templates/: add.html  base.html  detail.html  index.html  login.html
