[package]
name = "parcels"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "parcels"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json"] }
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"
tower-http = { version = "0.6", features = ["fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
subtle = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
